--- a/src/app/hospital-bi-dashboard/graphs-modal/graphs-modal.component.html
+++ b/src/app/hospital-bi-dashboard/graphs-modal/graphs-modal.component.html
@@ -15,7 +15,7 @@
                 </select>
             </div> -->
             <div class="row" style="justify-content: center;text-align-last: center;">
-                <h3>איחור</h3>
+                <h3>ממוצע איחור בדקות</h3>
             </div>
             <google-chart #chart [type]="type" [data]="data1" [columns]="columnNames1" [options]="options"
                 [width]="width" [height]="height" (select)="onSelect($event,1);">
@@ -35,7 +35,7 @@
     <div class="row section" dir="rtl">
         <div class="col-12" style="border: 1px solid black;border-radius: 10px;">
             <div class="row" style="justify-content: center;text-align-last: center;">
-                <h3>זמן אובדן</h3>
+                <h3>ממוצע זמן אובדן בדקות</h3>
             </div>
             <google-chart #chart [type]="type" [data]="data3" [columns]="columnNames3" [options]="options"
                 [width]="width" [height]="height" (select)="onSelect($event,3);">
@@ -55,7 +55,7 @@
     <div class="row section" dir="rtl">
         <div class="col-12" style="border: 1px solid black;border-radius: 10px;">
             <div class="row" style="justify-content: center;text-align-last: center;">
-                <h3>זמן גלישה</h3>
+                <h3>ממוצע זמן גלישה בדקות</h3>
             </div>
             <google-chart #chart [type]="type" [data]="data5" [columns]="columnNames5" [options]="options"
                 [width]="width" [height]="height" (select)="onSelect($event,5);">
