--- a/src/app/eventsschedule/eventsschedule.component.html
+++ b/src/app/eventsschedule/eventsschedule.component.html
@@ -1,6 +1,6 @@
 <div id="page-toshow" class="padding-top-0">
     <h1 class="page-title text-center">יומן אירועים</h1>
-    <div class="container-fluid trans-80">
+    <div class="container-fluid  ">
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
