--- a/src/app/hospital-bi-dashboard/eshpoz-modal/eshpoz-modal.component.html
+++ b/src/app/hospital-bi-dashboard/eshpoz-modal/eshpoz-modal.component.html
@@ -1,9 +1,13 @@
-<div class="wrapper" dir="rtl" [hidden]="excelLoader">
+<div class="wrapper text-center" dir="rtl" [hidden]="excelLoader">
     <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="onNoClick()">
         <span aria-hidden="true">&times;</span>
     </button>
     <h1 mat-dialog-title style="text-align: center;">תפוקות אשפוז</h1>
     <hr>
+    <mat-radio-group aria-label="Select an option" [formControl]="hospitalDepartType" (change)="changeDeaprtOfEshpoz()">
+        <mat-radio-button value="1" style="margin-left: 15px;">פנימיות</mat-radio-button>
+        <mat-radio-button value="2" style="margin-left: 15px;">הכל</mat-radio-button>
+    </mat-radio-group>
     <div class="row section" dir="rtl">
         <div class="col-12" style="border: 1px solid black;border-radius: 10px;">
             <div class="row" style="justify-content: center;text-align-last: center;">
