--- a/src/app/labor/labor.component.html
+++ b/src/app/labor/labor.component.html
@@ -157,7 +157,7 @@
                                                    
                                                     #one
                                                     value="1"
-                                                    >פוריה</mat-radio-button
+                                                    >צפון</mat-radio-button
                                                 >
                                             </mat-list-item>
                                         </div>
