--- a/src/app/mersham-n/mersham-n.component.html
+++ b/src/app/mersham-n/mersham-n.component.html
@@ -809,7 +809,7 @@
         >
             <div class="modal-header rel">
                 <h3 class="modal-title text-center">
-                    מרכז רפואי ע"ש ברוך פדה - פוריה
+                    מרכז רפואי צפון, ע"ש ברוך פדה
                 </h3>
                 <h2 class="modal-title text-center">
                     מרשם רוקחי והוראות לטיפול תרופתי
@@ -2028,7 +2028,7 @@
         <div class="modal-header rel">
             <img class="right-img" src="assets/images/gci-logo.png" />
             <h3 class="modal-title text-center">
-                מרכז רפואי ע"ש ברוך פדה - פוריה
+                מרכז רפואי צפון, ע"ש ברוך פדה
             </h3>
             <h2 class="modal-title text-center">
                 מרשם רוקחי והוראות לטיפול תרופתי
