--- a/src/app/stikers/stikers.component.html
+++ b/src/app/stikers/stikers.component.html
@@ -99,7 +99,7 @@
                         ></ngx-barcode>
                     </div>
                     <div class="row p-20">
-                        <span class="col">בי"ח פוריה</span>
+                        <span class="col">בי"ח צפון</span>
                     </div>
                 </div>
             </td>
