--- a/src/app/form-dashboard/tumor-board/tumor-board-modal/tumor-board-modal.component.html
+++ b/src/app/form-dashboard/tumor-board/tumor-board-modal/tumor-board-modal.component.html
@@ -65,7 +65,7 @@
         </div>
         <!-- CONTENT INPUT -->
         <div class="row">
-            <textarea style="width: 100%;" rows="15" formControlName="ContentData"></textarea>
+            <textarea style="width: 100%;" rows="15" placeholder="תוכן הדו'ח" formControlName="ContentData"></textarea>
         </div>
         <!-- SAVE BUTTON -->
         <div class="row">
