--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -181,7 +181,7 @@
 
                 </span>
                 <mat-progress-bar mode="indeterminate" *ngIf="loader"></mat-progress-bar>
-                <p *ngIf="!loader" style="color: cadetblue;">{{card.y}}</p>
+                <p *ngIf="!loader">{{card.y}}</p>
             </mat-card-content>
         </mat-card>
         <!-- <mat-card class="example-card text-center">
