--- a/src/app/cables/add-or-edit-cables/add-or-edit-cables.component.html
+++ b/src/app/cables/add-or-edit-cables/add-or-edit-cables.component.html
@@ -143,7 +143,7 @@
                             autocomplete="off"
                             class="form-control"
                             placeholder="PP2 Cab"
-                            formControlName="PP2Cab"
+                            formControlName="PP2Cable"
                             
                             type="text"
                         />
