--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -603,7 +603,7 @@
         </div>
     </mat-tab>
     <mat-tab label="נתונים בגרף">
-        <div class="container-fluid text-right">
+        <div class="container-fluid text-right fix-google-chart-height">
             <!-- 
                     [width]="widthC"
                     [height]="heightC" -->
