--- a/src/styles.css
+++ b/src/styles.css
@@ -1843,3 +1843,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border-top-color: #000000;
     animation: spinner 0.8s linear infinite;
 }
+.fix-google-chart-height .google-chart{
+    height: auto !important;
+}
