--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -360,6 +360,9 @@
                                                 <mat-radio-button class="radio-style" value="לא בוצע">
                                                     <span>לא בוצע</span>
                                                 </mat-radio-button>
+                                                <mat-radio-button *ngIf="action.ActionList == 'הנשמה ב LMA'" class="radio-style" value="החייאה קדם ביה'ח">
+                                                    <span>החייאה קדם ביה'ח</span>
+                                                </mat-radio-button>
                                             </div>
                                         </mat-radio-group>
                                     </div>
