--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -360,8 +360,14 @@
                                                 <mat-radio-button class="radio-style" value="לא בוצע">
                                                     <span>לא בוצע</span>
                                                 </mat-radio-button>
-                                                <mat-radio-button *ngIf="action.ActionList == 'הנשמה ב LMA'" class="radio-style" value="החייאה קדם ביה'ח">
-                                                    <span>החייאה קדם ביה'ח</span>
+                                                <mat-radio-button *ngIf="action.ActionList == 'הנשמה ב LMA'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                    <span>בוצע קדם ביה'ח</span>
+                                                </mat-radio-button>
+                                                <mat-radio-button *ngIf="action.ActionList == 'אינטובציה'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                    <span>בוצע קדם ביה'ח</span>
+                                                </mat-radio-button>
+                                                <mat-radio-button *ngIf="action.ActionList == 'החדרת עירוי / I.O'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                    <span>בוצע קדם ביה'ח</span>
                                                 </mat-radio-button>
                                             </div>
                                         </mat-radio-group>
