--- a/src/app/manage-clinic-price/manage-clinic-price.component.html
+++ b/src/app/manage-clinic-price/manage-clinic-price.component.html
@@ -139,8 +139,9 @@
                                         <td mat-cell *matCellDef="let element" [formGroupName]="element.value">
                                             <mat-form-field appearance="fill">
                                                 <!-- <mat-label>Favorite food</mat-label> -->
-                                                <mat-select formControlName="ServiceTeeth" multiple
-                                                    (selectionChange)="selectTeeth($event, element)">
+                                                <!-- <mat-select formControlName="ServiceTeeth" multiple
+                                                    (selectionChange)="selectTeeth($event, element)"> -->
+                                                <mat-select formControlName="ServiceTeeth" multiple>
                                                     <mat-option *ngFor="let tooth of teethList" [value]="tooth.value">
                                                         {{tooth.value}}
                                                     </mat-option>
