--- a/src/app/manage-clinic-price/manage-clinic-price.component.html
+++ b/src/app/manage-clinic-price/manage-clinic-price.component.html
@@ -137,14 +137,30 @@
                                         <th mat-header-cell *matHeaderCellDef style="text-align: center;"> מספרי שיניים
                                         </th>
                                         <td mat-cell *matCellDef="let element" [formGroupName]="element.value">
+                                            <!-- <mat-form-field appearance="fill" style="width: 50%;">
+                                                <mat-select formControlName="ServiceTeethType" (selectionChange)="TeethNumbers($event.value, element)">
+                                                    <mat-option value="constant">
+                                                        קבועות
+                                                    </mat-option>
+                                                    <mat-option value="milkey">
+                                                        חלביות
+                                                    </mat-option>
+                                                </mat-select>
+                                            </mat-form-field> -->
                                             <mat-form-field appearance="fill">
                                                 <!-- <mat-label>Favorite food</mat-label> -->
                                                 <!-- <mat-select formControlName="ServiceTeeth" multiple
                                                     (selectionChange)="selectTeeth($event, element)"> -->
                                                 <mat-select formControlName="ServiceTeeth" multiple>
-                                                    <mat-option *ngFor="let tooth of teethList" [value]="tooth.value">
+                                                    <mat-optgroup *ngFor="let teeth of teethList" [label]="teeth.name">
+                                                    <mat-option *ngFor="let tooth of teeth.teeth"
+                                                        [value]="tooth.value">
                                                         {{tooth.value}}
                                                     </mat-option>
+                                                </mat-optgroup>
+                                                    <!-- <mat-option *ngFor="let tooth of teethList" [value]="tooth.value">
+                                                        {{tooth.value}}
+                                                    </mat-option> -->
                                                 </mat-select>
                                             </mat-form-field>
                                         </td>
